# ChangeLog for dev-tex/memoir
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/memoir/Attic/ChangeLog,v 1.3 2005/02/21 17:44:19 luckyduck Exp $

  21 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> memoir-20040524.ebuild:
  stable on amd64. fixes #82641

  28 Dec 2004; Dylan Carlson <absinthe@gentoo.org> memoir-20040524.ebuild:
  Keywords ~amd64.

*memoir-20040524 (07 Nov 2004)

  07 Nov 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +memoir-20040524.ebuild:
  Initial import. Ebuild submitted by Henrik Brix Andersen <brix@gentoo.org>;
  bug #66739.
