@@ -1,4 +1,6 @@
-MD5 1b33d22edf0c92a5f2f8da0635485ea9 ChangeLog 624
+MD5 7695e63f225108b3c69126ff478e04a4 ChangeLog 744
 MD5 72b2bebaf0a93f18b271e2d0df4656e5 memoir-20040524.ebuild 542
 MD5 c472f5fd1646eb8bca71d8df5cb2bdcc metadata.xml 164
+MD5 8b1c06af5bca961ba8868bed52281578 memoir-20050323.ebuild 538
 MD5 b82d24602e978491abc0752b2cb5d00d files/digest-memoir-20040524 68
+MD5 012639db803943ad089df7b8019c60d2 files/digest-memoir-20050323 68
