@@ -1,0 +1,1 @@
+MD5 ee19076c3538b2684ed1fa4c9480ca60 memoir-20050323.tar.gz 1482240
