@@ -1,6 +1,11 @@
 # ChangeLog for dev-tex/memoir
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/memoir/Attic/ChangeLog,v 1.3 2005/02/21 17:44:19 luckyduck Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/memoir/Attic/ChangeLog,v 1.4 2005/05/09 19:00:32 brix Exp $
+
+*memoir-20050323 (09 May 2005)
+
+  09 May 2005; <brix@gentoo.org> +memoir-20050323.ebuild:
+  Version bump as per bug #90876.
 
   21 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> memoir-20040524.ebuild:
   stable on amd64. fixes #82641
